--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react-router": "^5.1.19",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^2.1.0",
+    "prettier": "2.7.1",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
     "vitest": "^0.23.4"
