--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -27,7 +28,9 @@
     "@types/react-router": "^5.1.19",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^2.1.0",
+    "husky": "^8.0.1",
     "prettier": "2.7.1",
+    "pretty-quick": "^3.1.3",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
     "vitest": "^0.23.4"
