--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/material": "^5.10.7",
     "axios": "^1.1.2",
     "date-fns": "^2.29.3",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.37.0",
@@ -31,6 +32,7 @@
     "@testing-library/dom": "^8.18.1",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-router": "^5.1.19",
