--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/react-router": "^5.1.19",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^2.1.0",
+    "dotenv": "^16.0.3",
     "husky": "^8.0.1",
     "prettier": "2.7.1",
     "pretty-quick": "^3.1.3",
