--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "jest",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "vitest run src",
+    "test:watch": "vitest src",
+    "test:coverage": "vitest run src --coverage"
   },
   "husky": {
     "hooks": {
@@ -30,6 +32,7 @@
   },
   "devDependencies": {
     "@testing-library/dom": "^8.18.1",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/lodash.debounce": "^4.0.7",
@@ -40,6 +43,7 @@
     "@vitejs/plugin-react": "^2.1.0",
     "dotenv": "^16.0.3",
     "husky": "^8.0.1",
+    "jsdom": "^20.0.1",
     "prettier": "2.7.1",
     "pretty-quick": "^3.1.3",
     "typescript": "^4.6.4",
