--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^2.29.3",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.37.0",
     "react-router-dom": "^6.4.1"
