--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.37.0",
     "react-router-dom": "^6.4.1",
+    "react-toastify": "^9.1.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
